use a custom compression algorithm to check compressedness

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
-colorgrad = "0.6.2"
-flate2 = "1.0.26"
+colorous = "1.0.12"
+scopeguard = "1.2.0"
 termcolor = "1.2.0"
